--- a/index.html
+++ b/index.html
@@ -13,15 +13,58 @@
     <span class="logo-text">Toobolist</span>
   </header>
 
-  <main>
+  <main class="container">
 
-    <input type="button" class="type-bottom" value="Add Task">
-    <input type="button" class="type-bottom-two" value="Add Section">
+    <div class="background-white container-small">
+      <input type="button" class="type-bottom" value="Add Task">
+      <input type="button" class="type-bottom-two" value="Add Section">
 
-    <h1 class="first-title">&#9660; New Task</h1>
-    <div class="options-list">
-      <span class="check-button"> &#10003;</span> Newsletter
+      <hr>
+
+      <section class="sections">
+        <h1 class="title-section">&#9660; New Task</h1>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Quarterly Newsletter <span class="info-button"> Editor</span>
+        </div>
+        
+      </section>
+
+      <section class="sections">
+        <h1 class="title-section">&#9660; Today</h1>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Quarterly Newsletter
+        </div>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Mobile app Launch
+        </div>
+        <div class="options-list">
+          <span class="check-button-red"> &#10007;</span> Interview John H.
+        </div>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Summit update to mobile storefronts
+        </div>
+      </section>
+
+      <section class="sections">
+        <h1 class="title-section">&#9660; Upcoming</h1>
+        <div class="options-list">
+          <span class="check-button-red"> &#10007;</span> Schedule meeting with Alex
+        </div>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Homepage refresh
+        </div>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Onboard new Sales team members
+        </div>
+        <div class="options-list">
+          <span class="check-button"> &#10003;</span> Review editorial calendar
+        </div>
+      </section>
+
+      
     </div>
+
+
 
   </main>
   
