--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="sections">
         <h1 class="title-section">&#9660; New Task</h1>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Quarterly Newsletter <span class="info-button"> Editor</span>
+          <span class="check-button"> &#10003;</span> Quarterly Newsletter <span class="info-button-blue"> Editorial</span>
         </div>
         
       </section>
@@ -32,16 +32,16 @@
       <section class="sections">
         <h1 class="title-section">&#9660; Today</h1>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Quarterly Newsletter
+          <span class="check-button"> &#10003;</span> Quarterly Newsletter <span class="info-button-blue"> Editorial</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Mobile app Launch
+          <span class="check-button"> &#10003;</span> Mobile app Launch <span class="info-button-purple"> Editorial</span>
         </div>
         <div class="options-list">
-          <span class="check-button-red"> &#10007;</span> Interview John H.
+          <span class="check-button-red"> &#10007;</span> Interview John H. <span class="info-button-darkgreen"> Editorial</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Summit update to mobile storefronts
+          <span class="check-button"> &#10003;</span> Summit update to mobile storefronts <span class="info-button-orange"> Editorial</span>
         </div>
       </section>
 
@@ -51,13 +51,13 @@
           <span class="check-button-red"> &#10007;</span> Schedule meeting with Alex
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Homepage refresh
+          <span class="check-button"> &#10003;</span> Homepage refresh <span class="info-button-violet"> Editorial</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Onboard new Sales team members
+          <span class="check-button"> &#10003;</span> Onboard new Sales team members <span class="info-button-yellow"> Editorial</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Review editorial calendar
+          <span class="check-button"> &#10003;</span> Review editorial calendar <span class="info-button-blue"> Editorial</span>
         </div>
       </section>
 
