--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="sections">
         <h1 class="title-section">&#9660; New Task</h1>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Quarterly Newsletter <span class="info-button-blue"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Quarterly Newsletter <span class="info-button bg-blue"> Editorial</span>
         </div>
         
       </section>
@@ -32,32 +32,32 @@
       <section class="sections">
         <h1 class="title-section">&#9660; Today</h1>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Quarterly Newsletter <span class="info-button-blue"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Quarterly Newsletter <span class="info-button bg-blue"> Editorial</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Mobile app Launch <span class="info-button-purple"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Mobile app Launch <span class="info-button bg-purple"> Q1 Goals</span>
         </div>
         <div class="options-list">
-          <span class="check-button-red"> &#10007;</span> Interview John H. <span class="info-button-darkgreen"> Editorial</span>
+          <span class="btn btn-red"> &#10007;</span> Interview John H. <span class="info-button bg-darkgreen"> Recruiting</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Summit update to mobile storefronts <span class="info-button-orange"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Summit update to mobile storefronts <span class="info-button bg-orange"> Mobile</span>
         </div>
       </section>
 
       <section class="sections">
         <h1 class="title-section">&#9660; Upcoming</h1>
         <div class="options-list">
-          <span class="check-button-red"> &#10007;</span> Schedule meeting with Alex
+          <span class="btn btn-red"> &#10007;</span> Schedule meeting with Alex
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Homepage refresh <span class="info-button-violet"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Homepage refresh <span class="info-button bg-violet"> Website</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Onboard new Sales team members <span class="info-button-yellow"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Onboard new Sales team members <span class="info-button bg-yellow"> Sales</span>
         </div>
         <div class="options-list">
-          <span class="check-button"> &#10003;</span> Review editorial calendar <span class="info-button-blue"> Editorial</span>
+          <span class="btn btn-green"> &#10003;</span> Review editorial calendar <span class="info-button bg-blue"> Editorial</span>
         </div>
       </section>
 
